2010-07-09  Roman Bovsunivskiy <a2k0001@gmail.com>
	* newFirewallDialog.cpp (newFirewallDialog::finishClicked): fixed
	crash when clicking finish after getting error about wrong IP
	address or netmask
	* FirewallCodeViewer.cpp (FirewallCodeViewer::fileSelected): now 
	when viewing again file that was viewed before scroll position is
	same as user left it.

2010-07-05  Roman Bovsunivskiy <a2k0001@gmail.com>
	
	* instDialog.cpp (instDialog::findFirewalls): sorting of filewall
	and cluster items in compile/install dialog is now case insensitive.
	
	* ProjectPanel.cpp (ProjectPanel::inspectAll)
	* ObjectManipulator.cpp (ObjectManipulator::inspet): inspect is now
	working with cluster objects.

2010-07-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::restoreCollapsedGroups): fixed
	SourceForge bug 3020761 "printing from command line causes
	Segmentation fault". Fixes #1533

2010-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* utils.cpp (parseCommandLine): See #1542 since now user can enter
	differet command line parameters together with the path to ssh and
	scp clients in the global Preferences dialog, we need to parse
	these properly. This is especially important if file paths or
	arguments contain white space characters. Unit tests are in
	src/gui/unit_tests/parseCommandLineTest

2010-06-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* installer_commands_reg_user: all instllation commands should be
	on the single line in the configlet so they are sent to the
	firewall as one line. When these commands were on separate lines,
	linefeed characters between them appeared on the standard input of
	command "sudo -S" and broke installation process. This only
	happened in my tests when I ran GUI installer on windows and
	looked like some sort of a race. When all commands are on the one
	line the problem disappeared. Changed only configlets that used
	sudo as part of installation script.
